# stm32-ultrasonic-radar

./: .clang-format  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32H750XX_FLASH.ld  stm32h750b-dk_VGRS_project_v1.ioc
Core/Inc/: adc.h  buzzer.h  display.h  exti.h  gpio.h  hcsr04.h  helper_functions.h  joystick.h  main.h  mg90s.h  redirect.h  stm32h7xx_hal_conf.h  tim.h  uart.h
Core/Src/: adc.c  buzzer.c  display.c  exti.c  gpio.c  hcsr04.c  helper_functions.c  joystick.c  main.c  mg90s.c  redirect.c  stm32h7xx_it.c  tim.c  uart.c
Drivers/CMSIS/Include/: cmsis_gcc.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal.c
Utilities/Fonts/: font12.c
Utilities/LCD/: stm32_lcd.c
Utilities/LCD/Inc/: stm32_lcd.h
